style.css
@import url('https://fonts.cdnfonts.com/css/futura-pt');
:root{
    font-family: 'Futura PT', Arial, Helvetica, sans-serif;
    font-weight: 450;
    text-align: center;
}
img{
    max-width: 100%;
    display: inline-block;
}
a{
    max-width: 100%;
    display: inline-block;
}
p{
    margin: 0;
}
body{
margin: 0;
}
a{
    text-decoration: none;
    color: inherit;
}
.header{
    display: flex;
    justify-content: space-between;
    max-width: 1920px;
    min-height: 10vh;
    align-items: center;
    padding: 0 10%;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    position: sticky;
    z-index: 3;
    top: 0;
    backdrop-filter: blur(5px);
    background-color: rgba(255, 255, 255, 0.342);
}
.logo{
    width: 239px;
    min-height: 29px;
    background-image: url(assets/Logo.png);
}
.menu-top-pc{
    display: flex;
    gap: 20px;

}
.menu-element-pc{
    padding: 7px 0;
    box-sizing:content-box;
    font-family: var(--header-font);
    font-size: 16px;
    
}
.bold{
    font-weight: 700;
}
.current-section{
    border-bottom: 2px solid black;
}
.content{
    background-color: rgba(246 246 246);
    position: relative;
}
#promo-content{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 111.44px;
    padding: 0 5%;
    position: relative;
    z-index: 1;

}
.promo-img{
    background-image: url(assets/design-vector.svg), url(assets/design-vector.svg) ;
    background-repeat: no-repeat, no-repeat;
    background-position: 5% 80%, 95% 50%;
    background-size: 114.73px, 130.87px;
    padding: 0 0 103px 0;
}
.promo-content-wrapper{
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
    gap: 33px;
    z-index: 3;
}
.logo-text{
    color: rgba(173, 72, 68, 1);
    font-size: min(10vw, 120px);
    margin: 0;
}
.promo-info{
    max-width: 654px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
}
.promo-text-big{
    font-size: 48px;
    text-wrap: wrap;

}
.promo-text-small{
    text-wrap: wrap;
}
.button{
background-color: rgba(173, 72, 68, 1);
color: white;
width: 171px;
min-height: 46px;
border: none;
font-size: 20px;
font-weight: 700;
padding: 0;
text-align: center;
}
.button:hover{
    transform: scale(1.1);
}
.button:active{
    transform: scale(0.9);
}
.generic-header{
    font-size: 48px;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    background-image: linear-gradient(90.01deg, #111111 -8.85%, #B1B1B1 58.84%, #696969 91.39%, #B1B1B1 116.12%);
    max-width: fit-content;
    align-self: center;
    margin: 0;
}
#Info{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    gap: 120px;
    background-color: rgb(246 246 246);
    padding: 0 0 5% 0 ;
}
.border-line{
    min-width: 126px;
    border-bottom: 1px solid black;
}
.flex-column{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 20px;
    align-items: center;
    padding: 50px 0;

}
.info-content{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.info-content-wrapper{
    max-width: 417px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    gap: 50px;
    padding: 0 103px;
    position: relative;

}
.info-content-wrapper:hover .infoPictures {
    border-bottom: 1px solid black;
}

.info-title{
    position: relative;
    font-size: 31px;
    padding-bottom: 20px;
    border-bottom: 2px solid transparent;
}
.info-text-content{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 30px;
    min-height: 286px;
}
.info-description{
    font-size: 20px;
}
.intake{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 30px;
}
.intake-method{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 20px;
}
.infoPictures{
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    padding-bottom: 20px;
    position: relative;
}

.info-content-wrapper img{
    max-width: 360px;
}
#composition{
    background-color: rgba(255, 255, 255, 1);
    padding: 0 5%;
    display: flex;
    flex-direction: column;

}
.composition-container{
    display: flex;
    flex-direction: column;
    gap: 20px;
    flex-wrap: wrap;
    min-height: 398px;
    max-width: 417px;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.219);
}
.composition-container:hover .info-title {
    max-width: fit-content;
    border-bottom: 2px solid black;
}
.composition-pic-wrapper{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 30px;
}
.composition-pic{
    position: relative;
    z-index: 2;
}
.composition-container-wrapper{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}
#products-content{
    padding: 120px 143px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 120px;

}
  
#products{
    display: flex;
    padding: 120px 0;
    justify-content: center;
}
.product-pic{
    width: 371px;
    min-height: 350px;
    background-color: gainsboro;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 31px;
    margin: 7.5px 0;
}
.selection-wrapper{
    font-size: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.selection-title{
    display: flex;
    align-items: center;
    padding: 10px;
    height: 22px;
    border: 2px solid rgba(173, 72, 68, 1);
}
.selection-arrow{
    max-width: 13px;
    pointer-events: none;
    position: absolute;
    margin-left: 50px;
}
#products-selection{
    width: 100%;


}
.select-button{
    display: flex;
    height: 46px;
    min-width: 127px;
    align-items: center;
    justify-content: center;
}
/* ... */

